# src/rest_api/docs/swagger.json
@@ -186,11 +186,6 @@
                 }
             },
             "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Create new user",
                 "consumes": [
                     "application/json"
